# sdtbs

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  makefile.cu  run.sh
benchmarks/: Makefile.am  Makefile.in  benchapi.h
benchmarks/inhouse/: Makefile.am  Makefile.in
benchmarks/inhouse/gma/: Makefile.am  Makefile.in  gma.cu  gma_reloc.cu
benchmarks/inhouse/lma/: Makefile.am  Makefile.in  lma.cu  lma_reloc.cu
benchmarks/inhouse/loopcalc/: Makefile.am  Makefile.in  loopcalc.cu  loopcalc_reloc.cu
benchmarks/inhouse/mklc/: Makefile.am  Makefile.in  mklc.cu
benchmarks/kmeans/: Makefile.am  Makefile.in  kmeans.cu  kmeans_reloc.cu
m4/: cuda.m4
src/: Makefile.am  Makefile.in
src/sdtbs/: Makefile.am  Makefile.in  benchapi.cu  benchmgr.cu  benchmgr.h  benchrun.cu  fedkern.cu  fedkern_dyn.cu  fedkern_host.cu  fedkern_static.cu  macrotb.cu  micro_tb.cu  misc.cu  report.cu  sched.cu  sched_cu.cu  sched_cu.h  sched_cu_rr.cu  sched_cu_rrf.cu  sched_dyn.cu  sched_dyn_fca.cu  sched_dyn_rrf.cu  sched_dyn_rrm.cu  sched_fca.cu  sched_host.cu  sched_prl.cu  sched_prl_rrp.cu  sched_rr.cu  sched_rrf.cu  sched_rrm.cu  sched_static.cu  sdtbs.c  sdtbs.h  sdtbs1  sdtbs_cu.h  skrun.cu  tbs_native.cu  tbs_sd.cu
